--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -3,17 +3,23 @@
   background: rgba(0,0,0,0.3);
   color: #fff;
   height: 100%;
+  width: 100%;
+  .container-fluid {
+    height: 100%;
+  }
 }
 #dashboard {
-  background: image-url('concrete_wall_2.png');
   margin-top: 40px;
-  min-height: 90%;
+  height: 100%;
+  width: 100%;
+  padding-right: 5%;
   .button-menu{
     padding-left: 0;
   }
 }
-// @media screen and (max-width: 767px) {
+
 .row-offcanvas {
+  height: 100%;
   position: relative;
   -webkit-transition: all .25s ease-out;
      -moz-transition: all .25s ease-out;
@@ -71,15 +77,40 @@
 #admin-display {
   height: 100%;
   min-height: 100%;
+  .btn-sm {
+    padding: 5px 34px;
+  }
+  .row {
+    height: 100%;
+  }
 }
 
 #admin-tabs {
   padding: 20px;
-}
-.table {
-  background: rgba(0,0,0,0.3);
-  width: 100%;
-  tbody {
+  height: 100%;
+  .panel {
+    height: 90%;
+  }
+  .table {
     color: black;
   }
+}
+
+.keypad {
+  color: grey;
+  padding: 10px;
+}
+
+.btn-keypad {
+  font-size: 30px;
+  .fa {
+    font-size: 30px;
+  }
+  margin-bottom: 10px;
+  @extend .btn-lg;
+  border-radius: 0;
+  border-top-right-radius: 0;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
 }
