--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,44 +1,42 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
-  <div class="container-fluid">
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-    </form>
-    <button type="button" class="btn btn-info navbar-btn">PDF</button>
-    <button type="button" class="btn btn-success navbar-btn">Charge All</button>
-  </div>
-</nav>
-<div class="row">
-  <div class="col-sm-12">
-    <div class="table-responsive">
-      <table class="table table-striped table-bordered" id="admin-customers">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>UUID</th>
-            <th>Quantity</th>
-            <th>Order Total</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @orders.each do |order| %>
-          <tr>
-            <td><%= order.name %> </td>
-            <td><%= order.email %> </td>
-            <td><%= order.id.truncate(8) %> </td>
-            <td><%= order.quantity %></td>
-            <td><%= number_to_currency(order.total - order.part_refund) %></td>
-            <td><span class="label label-info"><%= order.stripe_event %></span></td>
-            <td><%= link_to "view", order_path(order) %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <div class="text-right">
+      <%= link_to (fa_icon "download", text: "PDF"), admin_event_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
+      <%= link_to "Charge Orders", charges_path(event_id: @event.id), method: :post, class: "btn btn-lg btn-success" %>
     </div>
-    <%= will_paginate @orders, renderer: BootstrapPagination::Rails %>
   </div>
+  <div class="panel-body">
+    <form>
+      <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>" placeholder="Search Orders">
+    </form>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered" id="admin-customers">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>UUID</th>
+          <th>Quantity</th>
+          <th>Order Total</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+        <tr>
+          <td><%= order.name %> </td>
+          <td><%= order.email %> </td>
+          <td><%= order.id.truncate(8) %> </td>
+          <td><%= order.quantity %></td>
+          <td><%= number_to_currency(order.total - order.part_refund) %></td>
+          <td><span class="label label-info"><%= order.stripe_event %></span></td>
+          <td><%= link_to "view", order_path(order) %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <%= will_paginate @orders, renderer: BootstrapPagination::Rails %>
 </div>
