getting rid of this branch

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -62,3 +62,9 @@ $ ->
 $ ->
   $('[data-toggle=offcanvas]').click () ->
     $('.row-offcanvas').toggleClass('active')
+
+
+$ ->
+  $('.btn-keypad').click (e) ->
+    e.preventDefault();
+    console.log(this.text());
