--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -1,12 +1,12 @@
-.event-tickets-wrapper {
-  background: $brown;
-  height: 800px;
-}
+// .event-tickets-wrapper {
+//   background: $brown;
+//   height: 800px;
+// }
 
-.event-tickets-table {
-  .container {
-    background: image-url('concrete_wall_2.png');
-    height: 600px;
-  }
-  padding-top: 60px;
-}
+// .event-tickets-table {
+//   .container {
+//     background: image-url('concrete_wall_2.png');
+//     height: 600px;
+//   }
+//   padding-top: 60px;
+// }
