--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,68 +1,73 @@
-<div class="row">
-  <div class="col-lg-8 col-lg-offset-2 well">
-  <% if @event.errors.any? %>
-    <div class="alert alert-danger" >
-      <a class="close" data-dismiss="alert">&#215;</a>
-      <% @event.errors.full_messages.each do |msg| %>
-        <%= content_tag :div, msg %>
+<%= form_for [:admin, @event], html: {class: 'form form-horizontal', role: 'form'} do |f| %>
+<div class="panel panel-default" id="admin-event-edit">
+  <div class="panel-heading">
+    <div class="text-right">
+      <%= f.submit "Submit", class: "btn btn-primary btn-lg" %>
+      <%= link_to "Cancel", root_path, class: "btn btn-default btn-lg" %>
+    </div>
+  </div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+      <% if @event.errors.any? %>
+        <div class="alert alert-danger" >
+          <a class="close" data-dismiss="alert">&#215;</a>
+          <% @event.errors.full_messages.each do |msg| %>
+            <%= content_tag :div, msg %>
+          <% end %>
+        </div>
       <% end %>
-    </div>
-  <% end %>
-  <h3 class="page-header"><%= controller.action_name.capitalize %> Event</h3>
-  <%= form_for [:admin, @event], html: {class: 'form form-horizontal', role: 'form'} do |f| %>
-  <div class="form-group">
-  <%= f.label :name, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.text_field :name, class: "form-control", placeholder: ""%>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :location, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.text_field :location, class: "form-control", placeholder: "" %>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :date, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.date_field :date, class: "form-control", value: Date.today.strftime('%Y-%m-%d') %>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :time, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.time_field :time, class: "form-control", value: Time.now.strftime("%H:%M") %>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :target, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.number_field :target, class: "form-control", placeholder: "" %>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :ticket_price, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.number_field :ticket_price, class: "form-control", placeholder: ""%>
-  </div>
-  </div>
-  <div class="form-group">
-  <%= f.label :visible, class: "col-lg-2 control-label" %>
-  <div class="col-lg-6">
-    <%= f.check_box :visible, class: "form-control", placeholder: "" %>
-  </div>
-  </div>
-  <%= f.hidden_field :image %>
-  <%= f.hidden_field :about %>
+      <div class="form-group">
+      <%= f.label :name, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.text_field :name, class: "form-control", placeholder: ""%>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :location, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.text_field :location, class: "form-control", placeholder: "" %>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :date, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.date_field :date, class: "form-control", value: Date.today.strftime('%Y-%m-%d') %>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :time, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.time_field :time, class: "form-control", value: Time.now.strftime("%H:%M") %>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :target, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.number_field :target, class: "form-control", placeholder: "" %>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :ticket_price, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.number_field :ticket_price, class: "form-control", placeholder: ""%>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :visible, class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.check_box :visible, class: "form-control", placeholder: "" %>
+      </div>
+      </div>
+      <%= f.hidden_field :image %>
+      <%= f.hidden_field :about %>
+      <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-6">
+        <div class=''>
 
-  <div class="form-group">
-  <div class="col-lg-offset-2 col-lg-6">
-    <div class=''>
-      <button type="submit" class="btn btn-primary ">Submit</button>
-      <%= link_to "Cancel", root_path, class: "btn btn-default" %>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
-  <% end %>
   </div>
 </div>
+<% end %>
