--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <% end %>
         <% if current_user and !current_user.guest? %>
           <li><%= link_to("Your Account", user_path(current_user))%></li>
-          <li><%= link_to "Dashboard", admin_events_path %></li>
+          <li><%= link_to "Event Admin", admin_event_path(current_user.events.first) %></li>
           <li><%= link_to("New Event", new_admin_event_path) %></li>
         <% end %>
         <li class="divider"></li>
