saving before add json daata type

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -65,6 +65,17 @@ $ ->
 
 
 $ ->
-  $('.btn-keypad').click (e) ->
+  $('.btn-num').click (e) ->
     e.preventDefault();
-    console.log(this.text());
+    currentValue = $('.input-keypad').val();
+    newDigit = $(this).text();
+    $('.input-keypad').val(currentValue + newDigit);
+
+  $('.btn-clear').click (e) ->
+    e.preventDefault();
+    $('.input-keypad').val("");
+
+  $('.btn.submit').click(e) ->
+    e.preventDefault();
+    $(this).closest("form").submit();
+
