--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -119,3 +119,13 @@
 #admin-event-edit {
   color: black;
 }
+
+.input-keypad {
+   height: 100%;
+   font-size: 30px;
+   line-height: 60px;
+ }
+
+.keypad-display {
+  padding: 0;
+}
