--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @event], html: {class: 'form form-horizontal', role: 'form'} do |f| %>
+<%= form_for [:admin, @event], html: {class: 'form', role: 'form'} do |f| %>
 <div class="panel panel-default" id="admin-event-edit">
   <div class="panel-heading">
     <div class="text-right">
@@ -18,51 +18,51 @@
         </div>
       <% end %>
       <div class="form-group">
-      <%= f.label :name, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label "Name your event", class: " control-label" %>
+      <div class="">
         <%= f.text_field :name, class: "form-control", placeholder: ""%>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :location, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
-        <%= f.text_field :location, class: "form-control", placeholder: "" %>
+      <%= f.label "City and country your event will be in", class: " control-label" %>
+      <div class="">
+        <%= f.text_field :location, class: "form-control", placeholder: "Berlin, Germany" %>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :date, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label "Date of event", class: " control-label" %>
+      <div class="">
         <%= f.date_field :date, class: "form-control", value: Date.today.strftime('%Y-%m-%d') %>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :time, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label "Start time", class: " control-label" %>
+      <div class="">
         <%= f.time_field :time, class: "form-control", value: Time.now.strftime("%H:%M") %>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :target, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label "how many tickets do you want to sell?", class: " control-label" %>
+      <div class="">
         <%= f.number_field :target, class: "form-control", placeholder: "" %>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :ticket_price, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label :ticket_price, class: " control-label" %>
+      <div class="">
         <%= f.number_field :ticket_price, class: "form-control", placeholder: ""%>
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :visible, class: "col-lg-2 control-label" %>
-      <div class="col-lg-6">
+      <%= f.label "Check box to make your event visible to the public" %>
+      <div class="">
         <%= f.check_box :visible, class: "form-control", placeholder: "" %>
       </div>
       </div>
       <%= f.hidden_field :image %>
       <%= f.hidden_field :about %>
       <div class="form-group">
-      <div class="col-lg-offset-2 col-lg-6">
+      <div class="col-lg-offset-2 ">
         <div class=''>
 
         </div>
