--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,14 +25,12 @@
           <%= link_to(@event.name, event_path(@event), class: "navbar-brand") if @event %>
         </div>
         <div class="navbar-collapse collapse" style="height: 1px;">
-          <ul class="nav navbar-nav">
-            <!-- <li><%#= link_to "Dashboard", admin_events_path %></li> -->
-          </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email || "guest user" %><b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Your account", user_path(current_user) %></li>
+                <li><%= link_to("Save your Account", new_user_path) if current_user.guest?%></li>
+                <li><%= link_to "Your account", user_path(current_user) unless current_user.guest? %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Log out", logout_path %></li>
               </ul>
