--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h1 class="panel-title">Payment Settings</h1>
+    <h3 class="">Payment Settings</h3>
   </div>
   <div class="panel-body">
     <div class="row">
