--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -40,6 +40,7 @@
       </div>
     </div>
     <div class="container-fluid">
+      <%= render 'layouts/flash' %>
       <div class="row row-offcanvas row-offcanvas-left">
         <div class="col-xs-6 sidebar-offcanvas" id="sidebar" role="navigation">
           <div class="list-group">
