--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -93,7 +93,12 @@
     height: 100%;
   }
   .table {
-    color: black;
+    color: #555555;
+  }
+  form {
+    height: 100%;
+    color: #555555;
+    font-size: 18px;
   }
 }
 
@@ -114,10 +119,6 @@
   padding: 30px;
   width: 100%;
   height: 100%;
-}
-
-#admin-event-edit {
-  color: black;
 }
 
 .input-keypad {
