adapt to tickets

--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -6,6 +6,6 @@
   </div>
   <div class="panel-body" id="tickets-component">
     <%= react_component('FilterableTicketTable', {products: [{category: 'Sporting Goods', price: '$49.99', stocked: true, name: 'Football'},
-    {category: 'Sporting Goods', price: '$9.99', stocked: true, name: 'Baseball'}]}, {prerender: false}) %>
+    {category: 'Sporting Goods', price: '$9.99', stocked: false, name: 'Baseball'}]}, {prerender: false}) %>
   </div>
 </div>
