--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="panel-body" id="tickets-component">
-    <%= react_component('FilterableTicketTable', {products: [{category: 'Sporting Goods', price: '$49.99', stocked: true, name: 'Football'},
-    {category: 'Sporting Goods', price: '$9.99', stocked: false, name: 'Baseball'}]}, {prerender: false}) %>
+    <%= react_component('FilterableTicketTable', json_for(@tickets, root: :tickets), {prerender: false}) %>
   </div>
 </div>
+
