--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -13,8 +13,8 @@
 
 # Best in place stuff
 
-$ ->
-  $('.best_in_place').best_in_place()
+#$ ->
+ # $('.best_in_place').best_in_place()
 
 # Sum Order
 $ ->
