--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,8 +58,11 @@
   	<div class="container">
   		<div class="row">
   			<div class="col-lg-10 col-lg-offset-1">
-  				<%= @presenter.edit_button(@event) %>
-  				<div class="event-media-html"><%= @presenter.about_section(@event) %></div>
+  				<%#= @presenter.edit_button(@event) %>
+  				<div class="event-media-html">
+          <%#= @presenter.about_section(@event) %>
+           <%= react_component('AboutBox', json_for(@event), {prerender: false}) %>
+          </div>
   			</div>
   		</div>
   	</div>
