--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to(@event.name, event_path(@event), class: "navbar-brand") if @event %>
+          <%= link_to(@event.name, event_path(@event), class: "navbar-brand") if @event.try(:id) %>
         </div>
         <div class="navbar-collapse collapse" style="height: 1px;">
           <ul class="nav navbar-nav navbar-right">
@@ -56,11 +56,12 @@
               <div class="col-sm-2 button-menu">
                 <div class="btn-group-vertical">
                   <button type="button" class="btn btn-info btn-admin" data-toggle="offcanvas">Change event</button>
-                  <%= link_to "Orders", admin_event_path(@event), class: "btn btn-admin btn-info" %>
-                  <%= link_to "Tickets", admin_event_tickets_path(@event), class: "btn btn-admin btn-info" %>
-                  <%= link_to "Messages", new_admin_event_message_path(@event), class: "btn btn-admin btn-info" %>
-                  <%= link_to "Edit", edit_admin_event_path(@event), class: "btn btn-admin btn-info" %>
-                  <%= link_to "Payments", admin_event_user_path(@event, current_user), class: "btn btn-admin btn-info" %>
+                  <%= link_to("New Event", new_admin_event_path, class: "btn btn-admin btn-info") %>
+                  <%= link_to("Orders", admin_event_path(@event), class: "btn btn-admin btn-info") if @event.try(:id) %>
+                  <%= link_to("Tickets", admin_event_tickets_path(@event), class: "btn btn-admin btn-info") if @event.try(:id) %>
+                  <%= link_to("Messages", new_admin_event_message_path(@event), class: "btn btn-admin btn-info") if @event.try(:id) %>
+                  <%= link_to("Edit", edit_admin_event_path(@event), class: "btn btn-admin btn-info") if @event.try(:id) %>
+                  <%= link_to("Payments", admin_event_user_path(@event, current_user), class: "btn btn-admin btn-info") if @event.try(:id) %>
                 </div>
               </div>
               <div class="col-sm-10" id="admin-tabs">
